Add book actions

--- a/src/components/BookList.css
+++ b/src/components/BookList.css
@@ -1,6 +1,5 @@
 .book-card {
   margin: auto;
-  display: flex;
   width: 550px;
   margin: 10px;
   border: none;
@@ -27,4 +26,18 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+}
+
+.book-actions {
+  flex: 1;
+  margin: 5px 15px;
+}
+
+.book-actions .btn-edit,
+.book-actions .btn-delete  {
+  margin-right: 10px;
+}
+
+.book-actions .btn-update{
+  margin-left: auto;
 }
