--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #333;
-  color: whitesmoke
+  color: whitesmoke;
+}
+
+button, input {
+  outline: none;
 }
 
 code {
