--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   display: flex;
   justify-content: center;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Arial",
+    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -10,13 +10,9 @@ body {
   color: whitesmoke;
 }
 
-button, input {
+button,
+input {
   outline: none;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .btn {
@@ -55,4 +51,25 @@ code {
 .col {
   display: flex;
   flex-direction: column;
+}
+
+.popup-content {
+  padding: 1rem !important;
+  border-radius: 5px !important;
+  background-color: #333 !important;
+  border-color: #555 !important;
+  color: #eee !important;
+}
+.popup-content h1,
+label {
+  color: #eee !important;
+}
+.popup-content label {
+  font-weight: bold;
+  text-align: left;
+}
+@media screen and (max-width: 770px) {
+  .popup-content {
+    width: 100% !important;
+  }
 }
